2001-03-19  Charles 'Buck' Krasic  <krasic@acm.org>

	* Version 0.7

	* Compilation fixups for building without Xv.

2001-03-17  Charles 'Buck' Krasic  <krasic@acm.org>

	* Typo fix:  swab32 for big endian.

2001-03-09  Peter Schlaile <udbz@rz.uni-karlsruhe.de>
	* VLC encoder improvements: Now we do 3 passes and we do it even
	  better than my Sony Camcorder ;-)
	
	* need_dct_248 fixes, weighting fixes, seperated out the header
	  writer and a lot more things I've forgotten
	
	* NTSC encoding works now really
	
	* rgbtoyuv now adapts correctly to the encoding system (PAL or NTSC)

2001-03-05  Charles 'Buck' Krasic  <krasic@acm.org>

	* Version 0.6

	* Compile fixups to dct.c and encode.c for --disable-asm

2001-03-05  Thom van Os <thom@vanos.com>

	* NTSC encoding fixups.

2001-03-05  Peter Schlaile <udbz@rz.uni-karlsruhe.de>
	
	* Encoder speedups (factor 3 from realtime on my machine, it even
	  beats playdv using gtk display ;-) )

	* Fixed stupid need_dct_248() bug

	* Correct(tm) and faster quantization 

2001-02-14  Charles 'Buck' Krasic  <krasic@acm.org>

	* Version 0.5

	* Integrate patch #103780 "encoder and ppmqscale improvements",
	  from Peter Schlaile (see below)

	* Bump libtool library version number to reflect dv_init()
	  interface change.

	* Bug fix for bug #131581: 
	  "Initializating multiple dv_decoder_t	objects fails".  

	  Changed dv_init() to remove dependence on per-stream object, and
	  ignore multiple invocations.

	* Bugfix from Stefan Lucke for recent PAL breakage.

	* Cleaner rpm rule in Makefile.am

2001-02-14  Peter Schlaile <udbz@rz.uni-karlsruhe.de>

        * Again encoder speedups.
	
	* Fixed serious quant bugs (divide != shift!!!!)
	
	* Implemented DCT248 AAN version in C and MMX
	
	* Integrated use of DCT248 (somewhat experimental. My camcorder
	  apparently uses motion detection for this one...)
	
	* General code cleanups
	
	* ppmqscale can now shrink pictures
	
	* Added a lot of FIXMEs so other people can also improve things